# redhat-ai-workflow

./: .cursorcommands  .cursorrules  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .stylelintrc.json  .yamllint.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  TODO.md  config.example.json  config.json.example  opencode.json  pyproject.toml  requirements.txt  state.json.example
.claude/: AUTO_HEAL_SEQUENCES.md  LAYER5_COMPLETE.md  LAYER5_PHASE1_COMPLETE.md  LAYER5_PHASE2_COMPLETE.md  LAYER5_PHASE3_COMPLETE.md  LAYER5_PHASE4_COMPLETE.md  LAYER5_PHASE5_COMPLETE.md  LAYER5_REMAINING_WORK.md  LAYER5_SKILL_INTEGRATION.md  LAYER5_USAGE_LEARNING_DESIGN.md  layer5_demo.py  layer5_phase2_demo.py  layer5_phase4_demo.py  layer5_phase5_demo.py  ralph-loop.local.md  settings.json
.codex/: config.toml
.cursor/: hooks.json  mcp.json
.gemini/: settings.json
.github/: copilot-instructions.md
agents/: README.md  combined.yaml  core.yaml  developer-slim.yaml  developer.md  developer.yaml  devops-slim.yaml  devops.md  devops.yaml  incident-slim.yaml  incident.md  incident.yaml  release-slim.yaml  release.md  release.yaml  slack.yaml  universal.yaml
config/: __init__.py  constants.yaml  context_resolver.py  test_exclusions.yaml  validators.py
docs/: AI-WORKFLOW-GUIDE.md  DEVELOPMENT.md  README.md  claude-code-integration.md  configuration.md  ide-extension.md  learning-loop.md  meet-bot-gpu-optimization.md  meet-bot-plan.md  multi-agent-code-review.md  multiagent-model-selection.md  tool-organization.md
examples/: cursor-mcp-config.json  mcp-all-agents.json  mcp-cicd.json  mcp-core.json  mcp-debugging.json  mcp-developer.json  mcp-devops.json  mcp-full.json  mcp-incident.json  mcp-minimal.json  mcp-release.json
mcp-servers/: ARCHITECTURE.md  README.md
memory/: README.md
personas/: admin.yaml  code.md  code.yaml  core.yaml  database.yaml  dave.md  developer-slim.yaml  developer.md  developer.yaml  devops-slim.yaml  devops.md  devops.yaml  github.yaml  incident-slim.yaml  incident.md  incident.yaml  infra.yaml  meetings.md  meetings.yaml  observability.md  observability.yaml  performance.md  performance.yaml  presentations.md  presentations.yaml  project.md  project.yaml  release-slim.yaml  release.md  release.yaml  researcher.md  researcher.yaml  security.yaml  slack.yaml  slop.md  slop.yaml  universal.yaml  workspace.md  workspace.yaml
ptools/: run_skill_direct.py  sync_ai_rules.py  sync_commands.py  sync_config_example.py
scripts/: __init__.py  analyze_chat_commands.py  analyze_skill_tool_usage.py  backfill_q1_2026.py  check-types.sh  claude_agent.py  context_injector.py  cron_daemon.py  extension_watcher.py  fix_all_remaining.py  fix_e304_final.py  fix_session_projects.py  generate_layer5_dashboard.py  generate_persona_md.py  generate_persona_yaml.py  generate_skill_graph.py  generate_slides.py  get_slack_creds.py  get_slides_info.py  health_check.py  inscope_auto_login.py  install_services.sh  integration_test.py  mcp_proxy.py  meet_daemon.py  migrate_state.py  optimize_patterns.py  pattern_miner.py  ralph_wiggum_hook.py  run-super-linter.sh  run_slack_export.py  service_control.py  session_daemon.py  skill_hooks.py  skill_test_runner.py  slack_control.py  slack_daemon.py  slack_dbus.py  slack_export_full_test.py  slack_export_test.py  (+13 more)
server/: __init__.py  __main__.py  auto_heal_decorator.py  config.py  config_manager.py  debuggable.py  error_patterns.py  errors.py  http_client.py  json_file_manager.py  main.py  paths.py  persona_loader.py  protocols.py  ralph_loop_manager.py  session_builder.py  state_manager.py  timeouts.py  tool_discovery.py  tool_paths.py  tool_registry.py  usage_context_injector.py  usage_pattern_checker.py  usage_pattern_classifier.py  usage_pattern_extractor.py  usage_pattern_learner.py  usage_pattern_optimizer.py  usage_pattern_storage.py  usage_prevention_tracker.py  utils.py  websocket_server.py  workspace_state.py  workspace_tools.py  workspace_utils.py
services/: README.md  __init__.py
skills/: README.md  beer.yaml  (+125 more)
tool_modules/aa_code_search/: pyproject.toml
tool_modules/aa_code_search/src/: __init__.py  adapter.py  tools_basic.py  watcher.py
tool_modules/aa_dev_workflow/: pyproject.toml
tool_modules/aa_dev_workflow/src/: __init__.py  tools.py  tools_basic.py  tools_extra.py
tool_modules/aa_google_slides/: pyproject.toml
tool_modules/aa_google_slides/src/: __init__.py  tools_basic.py
tool_modules/aa_inscope/: pyproject.toml
tool_modules/aa_inscope/src/: __init__.py  adapter.py  tools_basic.py
tool_modules/aa_meet_bot/: pyproject.toml
tool_modules/aa_meet_bot/data/: example_attendees.txt
tool_modules/aa_meet_bot/scripts/: setup_devices.sh  setup_wav2lip.sh  test_e2e.py  test_pipeline.py  test_tts.py
tool_modules/aa_meet_bot/src/: __init__.py  attendee_enricher.py  attendee_service.py  audio_capture.py  audio_output.py  avatar_generator.py  browser_controller.py  config.py  gemini_hotload.py  gpu_text.py  intel_streaming.py  jira_preloader.py  llm_responder.py  matrix_animation.py  meet_audio.py  meet_captions.py  meet_devices.py  meet_participants.py  meet_sign_in.py  meeting_scheduler.py  notes_actions.py  notes_bot.py  notes_database.py  notes_transcription.py  stt_engine.py  tools_basic.py  tts_engine.py  video_generator.py  video_overlay.py  video_streaming.py  virtual_devices.py  voice_pipeline.py  wake_word.py
tool_modules/aa_ollama/: pyproject.toml
tool_modules/aa_ollama/src/: __init__.py  cache.py  categories.py  client.py  context_enrichment.py  instances.py  skill_discovery.py  stats.py  tool_filter.py  tool_registry.py  tools_basic.py
tool_modules/aa_ollama/tests/: __init__.py  test_tool_filter.py
tool_modules/aa_slack_persona/: pyproject.toml
tool_modules/aa_slack_persona/src/: __init__.py  adapter.py  sync.py  tools_basic.py  vector_store.py
tool_modules/aa_slop_fixer/: pyproject.toml
tool_modules/aa_slop_fixer/src/: __init__.py  tools_basic.py  transforms.py
tool_modules/aa_style/: pyproject.toml
tool_modules/aa_style/src/: __init__.py  analyzer.py  tools_basic.py
(+1578 files in other folders)
