[project]
name = "aa_code_search"
version = "0.1.0"
description = "Semantic code search with local vector embeddings for AI Workflow"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "watchfiles>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


