[project]
name = "aa-dev-workflow"
version = "0.1.0"
description = "AA MCP Server - development workflow tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
