[project]
name = "aa-google_slides"
version = "0.1.0"
description = "Google Slides MCP server for creating and managing presentations"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "fastmcp>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
