[project]
name = "aa-inscope"
version = "0.1.0"
description = "InScope AI Assistant integration for querying domain-specific AI assistants"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
