[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aa-slack-persona"
version = "0.1.0"
description = "Slack persona vector search and sync tools"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
