[project]
name = "aa-slop-fixer"
version = "0.1.0"
description = "AA MCP Server - slop auto-fix tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
